attempt 2 at using vss to prevent text overflow

--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
 .p {
     white-space: normal;
+    overflow: scroll;
 }
